--- a/app/src/main/res/layout/league_table_list_item.xml
+++ b/app/src/main/res/layout/league_table_list_item.xml
@@ -36,11 +36,22 @@
         app:layout_constraintTop_toTopOf="@+id/league_table_list_item_gym_name"
         app:layout_constraintBottom_toBottomOf="@+id/league_table_list_item_gym_name"
         app:layout_constraintStart_toEndOf="@+id/guideline_1"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/league_table_list_item_league_flag"
         android:text="1st"
         android:textSize="18sp"
         android:textColor="@color/ssBrown"
         android:textStyle="bold"
+        />
+
+    <ImageView
+        android:id="@+id/league_table_list_item_league_flag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/league_table_list_item_gym_name"
+        app:layout_constraintBottom_toBottomOf="@+id/league_table_list_item_gym_name"
+        app:layout_constraintStart_toEndOf="@+id/league_table_list_item_league_pos"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/ic_delete_24px"
         />
 
     <TextView
