red flag on users in this league but in the same user is in another league its up to that league creator to red flag - as different league creator mau have different standards

--- a/app/src/main/res/layout/league_table_list_item.xml
+++ b/app/src/main/res/layout/league_table_list_item.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/white_border"
     android:paddingBottom="10dp"
+    android:id="@+id/league_table_list_item_constraint"
     >
 
     <androidx.constraintlayout.widget.Guideline
