--- a/app/src/main/res/drawable/sw_thumb.xml
+++ b/app/src/main/res/drawable/sw_thumb.xml
@@ -3,19 +3,19 @@
 
     <item android:state_checked="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/ssGreen"/>
+            <solid android:color="@color/ssBrown"/>
             <size android:width="100dp" android:height="40dp"/>
             <corners android:radius="50dp"/>
-            <stroke android:width="2dp" android:color="@color/ssGreen"/>
+            <stroke android:width="2dp" android:color="@color/ssBrown"/>
         </shape>
     </item>
 
     <item android:state_checked="false">
         <shape android:shape="rectangle">
-            <solid android:color="@color/ssGreen"/>
+            <solid android:color="@color/ssBrown"/>
             <size android:width="100dp" android:height="40dp"/>
             <corners android:radius="50dp"/>
-            <stroke android:width="2dp" android:color="@color/ssGreen"/>
+            <stroke android:width="2dp" android:color="@color/ssBrown"/>
         </shape>
     </item>
 </selector>
