added progress bar when creating or joining a league

--- a/app/src/main/res/layout/custom_dialog_create_league.xml
+++ b/app/src/main/res/layout/custom_dialog_create_league.xml
@@ -75,6 +75,18 @@
         android:textSize="18dp"
         />
 
+    <ProgressBar
+        android:id="@+id/custom_dialog_create_league_create_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/custom_dialog_create_league_create"
+        app:layout_constraintStart_toStartOf="@+id/custom_dialog_create_league_create"
+        app:layout_constraintEnd_toEndOf="@+id/custom_dialog_create_league_create"
+        app:layout_constraintBottom_toBottomOf="@+id/custom_dialog_create_league_create"
+        android:backgroundTint="@color/ssBrown"
+        android:visibility="gone"
+        />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
