remove flag button

--- a/app/src/main/res/layout/activity_creator_monitor_league.xml
+++ b/app/src/main/res/layout/activity_creator_monitor_league.xml
@@ -117,6 +117,7 @@
         android:background="@drawable/brown_border"
         android:backgroundTint="@color/ssWhite"
         android:textAlignment="center"
+        android:textColor="@color/ssBackgroundBlack"
         />
 
     <TextView
