--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,8 @@
     <color name="ssBrown">#a8834f</color>
     <color name="ssRed">#E81F1F</color>
 
+    <color name="lightGrey">#e8e8e8</color>
+
 
 
 </resources>
