--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -55,7 +55,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@color/ssBrown"
+        android:background="@color/lightGrey"
         app:layout_constraintVertical_weight="0.9"
         />
 
@@ -69,7 +69,7 @@
         app:layout_constraintBottom_toTopOf="@+id/filter_main_view_drop_down"
         android:layout_marginTop="20dp"
         android:text="Sort by: "
-        android:textColor="@color/ssWhite"
+        android:textColor="@color/ssBackgroundBlack"
         android:textSize="18sp"
         android:textStyle="bold"
         />
@@ -277,7 +277,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
         android:background="@drawable/white_border"
-        android:backgroundTint="@color/ssBlack"
+        android:backgroundTint="@color/ssBrown"
         android:text="Submit"
         android:textAllCaps="false"
         android:textColor="@color/ssWhite"
