--- a/app/src/main/res/layout/fragment_fragment_strength_league_results.xml
+++ b/app/src/main/res/layout/fragment_fragment_strength_league_results.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".FragmentStrengthLeagues"
-    android:background="@color/ssBrown">
+    android:background="@color/lightGrey">
 
     <!-- TODO: Update blank fragment layout -->
     <Button
@@ -20,8 +20,8 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="10dp"
         android:background="@drawable/white_border"
-        android:backgroundTint="@color/ssWhite"
-        android:textColor="@color/ssBackgroundBlack"
+        android:backgroundTint="@color/ssBrown"
+        android:textColor="@color/ssWhite"
         android:textAllCaps="false"
         android:textStyle="bold"
         android:textSize="18sp"
@@ -38,8 +38,8 @@
         android:layout_marginEnd="20dp"
         android:text="Join a league"
         android:background="@drawable/white_border"
-        android:backgroundTint="@color/ssWhite"
-        android:textColor="@color/ssBackgroundBlack"
+        android:backgroundTint="@color/ssBrown"
+        android:textColor="@color/ssWhite"
         android:textAllCaps="false"
         android:textStyle="bold"
         android:textSize="18sp"
@@ -56,7 +56,7 @@
         android:text="Leagues you play in:"
         android:textAllCaps="false"
         android:backgroundTint="@color/ssWhite"
-        android:textColor="@color/ssWhite"
+        android:textColor="@color/ssBackgroundBlack"
         android:textAlignment="center"
         android:textStyle="bold"
         android:textSize="18sp"
