--- a/app/src/main/res/layout/league_table_list_item.xml
+++ b/app/src/main/res/layout/league_table_list_item.xml
@@ -6,7 +6,9 @@
     android:layout_height="wrap_content"
     android:background="@drawable/white_border"
     android:orientation="vertical"
-    android:paddingBottom="10dp">
+    android:paddingBottom="10dp"
+    android:layout_marginTop="10dp"
+    >
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_1"
